# nand2tetris2

./: .gitignore  README.md
C++/assembler/: CMakeLists.txt
C++/assembler/include/: assembler.h  instruction.h  symbol_table.h
C++/assembler/src/: CMakeLists.txt  assembler.cpp  instruction.cpp  main.cpp  symbol_table.cpp
C++/assembler/test/: CMakeLists.txt  assembler_test.cpp  instruction_test.cpp  symbol_table_test.cpp
C++/assembler/test/data/expected/: Mult.hack
C++/assembler/test/src/: assembler_test.cpp
C++/compiler/: .gitignore  CMakeLists.txt
C++/compiler/include/: Parser.hpp  array_term.hpp  class.hpp  class_var_dec.hpp  code_generator.hpp  do_statement.hpp  expression.hpp  expression_list.hpp  function_call.hpp  identifier_term.hpp  if_statement.hpp  integer_term.hpp  jack_fragment.hpp  keyword_term.hpp  let_statement.hpp  method_call_term.hpp  parameter_list.hpp  parenthesized_term.hpp  parser.h  parser.hpp  parser2.hpp  return_statement.hpp  statement.hpp  statement_factory.hpp  string_term.hpp  subroutine_body.hpp  subroutine_call_term.hpp  subroutine_dec.hpp  subroutine_var_dec.hpp  symbol_table.hpp  syntax_tree.hpp  term.hpp  term_factory.hpp  terms.hpp  token.hpp  tokenizer.hpp  tree.hpp  types.hpp  unaryop_term.hpp  var_dec.hpp  (+1 more)
C++/compiler/src/: CMakeLists.txt  Parser.cpp  array_term.cpp  class.cpp  class_var_dec.cpp  code_generator.cpp  do_statement.cpp  expression.cpp  expression_list.cpp  function_call.cpp  identifier_term.cpp  if_statement.cpp  integer_term.cpp  jack_fragment.cpp  keyword_term.cpp  let_statement.cpp  method_call_term.cpp  parameter_list.cpp  parenthesized_term.cpp  parser.cpp  return_statement.cpp  statement_factory.cpp  string_term.cpp  subroutine_body.cpp  subroutine_call_term.cpp  subroutine_dec.cpp  subroutine_var_dec.cpp  symbol_table.cpp  symbol_table.cpp.bak  syntax_tree.cpp  term.cpp  term_factory.cpp  token.cpp  tokenizer.cpp  unaryop_term.cpp  var_dec.cpp  while_statement.cpp
C++/compiler/test/: CMakeLists.txt  code_generator_test.cpp  parser_test.cpp  statement_factory_test.cpp  symbol_table_test.cpp  term_factory_test.cpp  term_test.cpp  test_symbol_table.cpp  token_test.cpp  tokenizer_test.cpp  utils.cpp  utils.hpp
C++/compiler/test/data/: array_term.jack  array_term.vm  array_term.xml  class_data.jack  class_data.xml  class_empty.xml  class_method.jack  class_method.xml  class_var_dec.jack  class_var_dec.xml  do.jack  do.xml  do_method_call.jack  do_method_call.vm  do_method_call.xml  expression.jack  expression.xml  expression_list.jack  expression_list.xml  field_class_var_dec.jack  identifier_term.jack  identifier_term.xml  identifier_term2.jack  identifier_term2.vm  if.jack  if.vm  if.xml  if_else.jack  if_else.vm  if_else.xml  integer_term.xml  keyword_term.xml  let_statement_array.jack  let_statement_array.vm  let_statement_array.xml  let_statement_variable.vm  let_statement_variable.xml  method_call.jack  method_call.vm  method_call.xml  (+36 more)
C++/compiler/test/data/expected/ArrayTest/: Main.xml
C++/compiler/test/data/expected/Square/: Main.xml  Square.xml  SquareGame.xml
C++/test/: CMakeLists.txt
C++/test/data/expected/: eq.cmp  not.tst  popargument.cmp  poplocal.cmp  poplocal.tst  popstatic.cmp  popstatic.tst  popstatic.vm  pushargument.cmp  pushargument.tst  pushconstant.tst  pushstatic.cmp  pushstatic.tst
C++/test/src/: vm_translator_test.cpp
C++/vmtranslator/: CMakeLists.txt
C++/vmtranslator/include/: add.h  and.h  binary_alu_cmd.h  call.h  command.h  command_types.h  eq.h  factory.h  function.h  goto.h  gt.h  if-goto.h  label.h  lt.h  neg.h  not.h  or.h  pop.h  pop_static.h  push.h  push_static.h  relational_cmd.h  return.h  sub.h  translator.h  vmtranslator.h
C++/vmtranslator/src/: CMakeLists.txt  add.cpp  and.cpp  binary_alu_cmd.cpp  call.cpp  command.cpp  eq.cpp  factory.cpp  function.cpp  goto.cpp  gt.cpp  if-goto.cpp  label.cpp  lt.cpp  neg.cpp  not.cpp  or.cpp  pop.cpp  pop_static.cpp  push.cpp  push_static.cpp  relational_cmd.cpp  return.cpp  sub.cpp  translator.cpp  vmtranslator.cpp
C++/vmtranslator/test/: CMakeLists.txt  command_test.cpp  factory_test.cpp  translator_test.cpp  utils.cpp  utils.h  vmtranslator_test.cpp
C++/vmtranslator/test/data/expected/: BasicTest.asm  PointerTest.asm  SimpleAdd.asm  SimpleFunction.asm  StackTest.asm  StaticTest.asm  add.asm  add.cmp  add.tst  and.asm  and.cmp  and.tst  eq.asm  eq.tst  gt.asm  gt.cmp  gt.tst  lt.asm  lt.cmp  lt.tst  neg.asm  neg.cmp  neg.tst  not.asm  or.asm  or.cmp  or.tst  popargument.asm  popargument.tst  popargument.vm  poplocal.asm  popstatic.asm  pushargument.asm  pushstatic.asm  sub.asm  sub.cmp  sub.tst
C++/vmtranslator/test/data/expected/FibonacciElement/: FibonacciElement.asm
C++/vmtranslator/test/data/expected/NestedCall/: NestedCall.asm
C++/vmtranslator/test/data/expected/StaticsTest/: StaticsTest.asm
Python/assembler/: assembler.py
Python/test/: test_assembler.py
Python/test/data/: Mult.asm
